--- a/index.html
+++ b/index.html
@@ -32,63 +32,63 @@
     <div class="container">
       <!-- Timeblocks go here -->
       
-      <div class = "row hour">09:00AM
+      <div class = "row hour" value = "09:00AM">09:00AM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">10:00AM
+      <div class = "row hour" value = "10:00AM">10:00AM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">11:00AM
+      <div class = "row hour" value = "11:00AM">11:00AM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">12:00PM
+      <div class = "row hour" value = "12:00PM">12:00PM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">13:00PM
+      <div class = "row hour" value = "13:00PM">13:00PM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">14:00PM
+      <div class = "row hour" value = "14:00PM">14:00PM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">15:00PM
+      <div class = "row hour" value = "15:00PM">15:00PM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">16:00PM
+      <div class = "row hour" value = "16:00PM">16:00PM
         <textarea class = "description col-lg-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-lg-1"></button>
       </div>
 
-      <div class = "row hour">17:00PM
+      <div class = "row hour" value = "17:00PM">17:00PM
         <textarea class = "description col-lg-10">
 
         </textarea>
