--- a/index.html
+++ b/index.html
@@ -32,63 +32,72 @@
     <div class="container">
       <!-- Timeblocks go here -->
       
-      <div class = "row hour" value = "09:00AM">09:00AM
+      <div class = "row time-block" data-hour = "9">
+        <div class = "hour">09:00AM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "10:00AM">10:00AM
+      <div class = "row time-block" data-hour = "10">
+        <div class = "hour">10:00AM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "11:00AM">11:00AM
+      <div class = "row time-block" data-hour = "11">
+        <div class = "hour">11:00AM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "12:00PM">12:00PM
+      <div class = "row time-block" data-hour = "12">
+        <div class = "hour">12:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "13:00PM">13:00PM
+      <div class = "row time-block" data-hour = "13">
+        <div class ="hour">13:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "14:00PM">14:00PM
+      <div class = "row time-block" data-hour = "14">
+        <div class = "hour">14:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "15:00PM">15:00PM
+      <div class = "row time-block" data-hour = "15">
+        <div class = "hour">15:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "16:00PM">16:00PM
+      <div class = "row time-block" data-hour = "16">
+        <div class = "hour">16:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
         <button class = "btn saveBtn float-right bi bi-save col-1"></button>
       </div>
 
-      <div class = "row hour" value = "17:00PM">17:00PM
+      <div class = "row time-block" data-hour = "17">
+        <div class = "hour">17:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
