--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Timeblocks go here -->
       
       <div class = "row time-block" data-hour = "9">
-        <div class = "hour">09:00AM</div>
+        <div class = "hour col-1">09:00AM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -41,7 +41,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "10">
-        <div class = "hour">10:00AM</div>
+        <div class = "hour col-1">10:00AM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -49,7 +49,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "11">
-        <div class = "hour">11:00AM</div>
+        <div class = "hour col-1">11:00AM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -57,7 +57,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "12">
-        <div class = "hour">12:00PM</div>
+        <div class = "hour col-1">12:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -65,7 +65,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "13">
-        <div class ="hour">13:00PM</div>
+        <div class ="hour col-1">13:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -73,7 +73,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "14">
-        <div class = "hour">14:00PM</div>
+        <div class = "hour col-1">14:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -81,7 +81,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "15">
-        <div class = "hour">15:00PM</div>
+        <div class = "hour col-1">15:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -89,7 +89,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "16">
-        <div class = "hour">16:00PM</div>
+        <div class = "hour col-1">16:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
@@ -97,7 +97,7 @@
       </div>
 
       <div class = "row time-block" data-hour = "17">
-        <div class = "hour">17:00PM</div>
+        <div class = "hour col-1">17:00PM</div>
         <textarea class = "description col-10">
 
         </textarea>
